@@ -1,13 +1,58 @@
 # autopwn
+
 Specify targets and run sets of tools against them
 
-autopwn is supposed to make a pentester's life easier by allowing
-them to specify tools they would like to run against targets, without
-having to type them all the time or write some dodgy script. This
-tool will also be useful during certain exams I suspect..
+autopwn is designed to make a pentester's life easier and more consistent
+by allowing them to specify tools they would like to run against targets,
+without having to type them in a shell or write a script. This tool will
+probably be useful during certain exams as well..
 
-Core concepts of this project are:
+## Running
 
-1. Quickness - Specify targets and run pre-defined assessments against them
-2. Easiness - autopwn should be easy to use and write tool and assessment configurations for
-3. Recon - autopwn should be considered for recon purposes only. I wouldn't rely on this script to automatically identify and exploit issues (even though the tool name sort of implies such skiddy concepts)
+To use autopwn, simply fork the GitHub repository and run autopwn.py
+
+## Usage
+
+autopwn supports a number of options, including:
+
+-t <target_file>          Required. The file containing the
+                          targets
+-a <assessment_type>      Optional. Specify assessment name
+                          to run. Autopwn will not prompt to
+                          run tools with this option
+-d <assessment_directory> Optional. Specify assessment directory
+-i                        Deprecated (and buggy). Optional. Ignore
+                          missing binary conditions
+-r                        Optional. Ignore tool rulesets
+-s                        Optional. Run tools in screen session
+
+## Contributing
+
+1. Fork it!
+2. Create your feature branch: `git checkout -b my-new-feature`
+3. Commit your changes: `git commit -am 'Add some feature'`
+4. Push to the branch: `git push origin my-new-feature`
+5. Submit a pull request :D
+
+## Credits
+
+Developed by Aidan Marlin (aidan [dot] marlin [at] nccgroup [dot] com)
+while working at NCC Group.
+
+## License
+
+autopwn - Specify targets and run sets of tools against them
+Copyright (C) 2015 Aidan Marlin (aidan [dot] marlin [at] nccgroup [dot] com)
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU Affero General Public License as
+published by the Free Software Foundation, either version 3 of the
+License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU Affero General Public License for more details.
+
+You should have received a copy of the GNU Affero General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
