@@ -1,3 +1,7 @@
+autopwn v0.9.4 - 20150415
+
+* Added option to specify assessments directory
+
 autopwn v0.9.3 - 20150415
 
 * Added timezone info to logs
